fix: Heading color on carousel w/ on dark mode

--- a/src/main/resources/assets/css/base.css
+++ b/src/main/resources/assets/css/base.css
@@ -73,6 +73,7 @@ pre code.hljs {
 }
 
 .text-carousel {
+    color: white;
     text-shadow: 1px 1px 0 #000,
     -1px 1px 0 #000,
     -1px -1px 0 #000,
